// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Months> marks months as out of range 1`] = `
Object {
  "months": Array [
    Object {
      "isOutOfRange": true,
      "label": "January",
      "value": 1,
    },
    Object {
      "isOutOfRange": true,
      "label": "February",
      "value": 2,
    },
    Object {
      "isOutOfRange": true,
      "label": "March",
      "value": 3,
    },
    Object {
      "isOutOfRange": true,
      "label": "April",
      "value": 4,
    },
    Object {
      "label": "May",
      "value": 5,
    },
    Object {
      "label": "June",
      "value": 6,
    },
    Object {
      "label": "July",
      "value": 7,
    },
    Object {
      "label": "August",
      "value": 8,
    },
    Object {
      "isOutOfRange": true,
      "label": "September",
      "value": 9,
    },
    Object {
      "isOutOfRange": true,
      "label": "October",
      "value": 10,
    },
    Object {
      "isOutOfRange": true,
      "label": "November",
      "value": 11,
    },
    Object {
      "isOutOfRange": true,
      "label": "December",
      "value": 12,
    },
  ],
}
`;

exports[`<Months> provides months 1`] = `
Object {
  "months": Array [
    Object {
      "label": "January",
      "value": 1,
    },
    Object {
      "label": "February",
      "value": 2,
    },
    Object {
      "label": "March",
      "value": 3,
    },
    Object {
      "label": "April",
      "value": 4,
    },
    Object {
      "label": "May",
      "value": 5,
    },
    Object {
      "label": "June",
      "value": 6,
    },
    Object {
      "label": "July",
      "value": 7,
    },
    Object {
      "label": "August",
      "value": 8,
    },
    Object {
      "label": "September",
      "value": 9,
    },
    Object {
      "label": "October",
      "value": 10,
    },
    Object {
      "label": "November",
      "value": 11,
    },
    Object {
      "label": "December",
      "value": 12,
    },
  ],
}
`;
